@@ -40,6 +40,7 @@ The rules for this file:
     ...) in addition to providing all trajectories as a list,
     i.e. Universe(topology, [traj1, traj2, ...])
   * Added support for YASP and IBIsCO formats (.trz)
+  * new methods for AtomGroup: packintobox() (only orthorhombic boxes)
 
   Changes
 
